fixed long links not wrapping

--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@ p
 /*Link styles*/
 a {
     color: black;
+    word-break: break-all;
 }
 
 a:hover {
